--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,18 @@ code {
     monospace;
 }
 
+.loc {
+	background-color: orange;
+	opacity: 0.8;
+	width: 20px;
+	height: 20px;
+	border-radius: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	color: black;
+	font-weight: bold;
+}
 
 /* DragDropList */
 .dragdroplist-frame {
@@ -69,3 +81,4 @@ code {
 .dragdroplist-content {
   margin-top: 20px;
 }
+
